--- a/Research Projects/Undergraduate Research Project (pt-BR) - Feature Extraction Tabular Data/main.tex
+++ b/Research Projects/Undergraduate Research Project (pt-BR) - Feature Extraction Tabular Data/main.tex
@@ -35,13 +35,13 @@ Bolsista: Alecia}
 Este projeto de pesquisa concentra-se no desenvolvimento de técnicas avançadas de extração de atributos adaptadas para dados tabulares. O objetivo é superar os desafios únicos apresentados por conjuntos de dados tabulares com alta dimensionalidade, atributos categóricos e valores ausentes. Ao utilizar conhecimento específico do domínio e incorporar métodos inovadores, como redução de dimensionalidade, codificação de atributos categóricos e imputação de valores ausentes, o projeto tem como objetivo aprimorar a interpretabilidade, robustez e desempenho preditivo de modelos de aprendizado de máquina aplicados a dados tabulares. Serão realizados experimentos extensivos em conjuntos de dados do mundo real para avaliar os métodos propostos e compará-los com técnicas existentes. Os resultados deste projeto têm o potencial de melhorar o desempenho dos modelos e fornecer insights sobre os padrões subjacentes presentes em dados tabulares, contribuindo assim para o campo da ciência de dados e aprendizado de máquina.
    
 \section*{Palavras-chave}
-    sdjkfls
-   
+    Extração de Características, aprendizado de máquina, inteligência artificial
+
 \section{Introdução}
 	
-Nos últimos anos, o crescimento exponencial na coleta de dados tem levado ao surgimento de conjuntos de dados tabulares em larga escala em diversos domínios, como finanças, saúde e comércio eletrônico. Dados tabulares geralmente consistem em informações estruturadas organizadas em linhas e colunas, sendo que cada coluna representa um atributo específico. Técnicas eficazes de extração de atributos são cruciais para extrair informações significativas desses conjuntos de dados e melhorar o desempenho de algoritmos de aprendizado de máquina.
+Nos últimos anos, o crescimento exponencial na coleta de dados tem levado ao surgimento de conjuntos de dados tabulares em larga escala em diversos domínios, como finanças, saúde e comércio eletrônico \cite{hastie2009elements}. Dados tabulares geralmente consistem em informações estruturadas organizadas em linhas e colunas, sendo que cada coluna representa um atributo específico. Técnicas eficazes de extração de atributos são cruciais para extrair informações significativas desses conjuntos de dados e melhorar o desempenho de algoritmos de aprendizado de máquina \cite{mutlag2020feature}.
 
-A extração de atributos tem como objetivo transformar dados tabulares brutos em um conjunto reduzido e representativo de atributos que capturam as características essenciais dos dados. Métodos tradicionais de extração de atributos, como Análise de Componentes Principais (PCA) e Análise de Componentes Independentes (ICA), têm sido amplamente aplicados em domínios de processamento de imagem e sinal. No entanto, os desafios únicos apresentados por dados tabulares, como alta dimensionalidade, atributos categóricos e valores ausentes, requerem técnicas de extração de atributos adaptadas.
+A extração de atributos tem como objetivo transformar dados tabulares brutos em um conjunto reduzido e representativo de atributos que capturam as características essenciais dos dados \cite{Guyon2006}. Métodos tradicionais de extração de atributos, como Análise de Componentes Principais (PCA) e Análise de Componentes Independentes (ICA), têm sido amplamente aplicados em domínios de processamento de imagem e sinal. No entanto, os desafios únicos apresentados por dados tabulares, como alta dimensionalidade, atributos categóricos e valores ausentes, requerem técnicas de extração de atributos adaptadas.
 
 Este projeto de pesquisa tem como foco explorar e desenvolver métodos avançados de extração de atributos especificamente projetados para dados tabulares. Ao abordar as limitações das técnicas existentes e incorporar conhecimento específico do domínio, visamos melhorar a interpretabilidade, robustez e desempenho preditivo de modelos de aprendizado de máquina aplicados a conjuntos de dados tabulares.
    
@@ -57,7 +57,7 @@ c) Avaliar o desempenho e a interpretabilidade dos métodos propostos: Para aval
    
 \section{Justificativa/Relevância}
 
-Este projeto de pesquisa possui uma relevância significativa no campo da ciência de dados e aprendizado de máquina. A extração de atributos informativos de dados tabulares é crucial para obter previsões ou insights precisos e confiáveis. Os resultados deste projeto terão as seguintes implicações:
+Este projeto de pesquisa possui uma relevância significativa no campo da ciência de dados e aprendizado de máquina. A extração de atributos informativos de dados tabulares é crucial para obter previsões ou insights precisos e confiáveis \cite{jain1997feature,jovic2015review,zebari2020comprehensive}. Os resultados deste projeto terão as seguintes implicações:
 
 a) Melhoria no desempenho do modelo: Ao utilizar técnicas avançadas de extração de atributos, temos como objetivo aprimorar o desempenho preditivo de modelos de aprendizado de máquina aplicados a dados tabulares. Isso permitirá previsões mais precisas, tarefas de classificação e regressão em diversos domínios.
 
