--- a/Research Projects/Undergraduate Research Project (pt-BR) - Feature Extraction Tabular Data/references.bib
+++ b/Research Projects/Undergraduate Research Project (pt-BR) - Feature Extraction Tabular Data/references.bib
@@ -1,3 +1,102 @@
+@article{guyon2003introduction,
+  title={An introduction to variable and feature selection},
+  author={Guyon, Isabelle and Elisseeff, Andr{\'e}},
+  journal={Journal of machine learning research},
+  volume={3},
+  number={Mar},
+  pages={1157--1182},
+  year={2003}
+}
+
+@book{hastie2009elements,
+  title={The elements of statistical learning: data mining, inference, and prediction},
+  author={Hastie, Trevor and Tibshirani, Robert and Friedman, Jerome H and Friedman, Jerome H},
+  volume={2},
+  year={2009},
+  publisher={Springer}
+}
+
+@article{jain1997feature,
+  title={Feature selection: Evaluation, application, and small sample performance},
+  author={Jain, Anil and Zongker, Douglas},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={19},
+  number={2},
+  pages={153--158},
+  year={1997},
+  publisher={IEEE}
+}
+
+@inproceedings{jovic2015review,
+  title={A review of feature selection methods with applications},
+  author={Jovi{\'c}, Alan and Brki{\'c}, Karla and Bogunovi{\'c}, Nikola},
+  booktitle={2015 38th international convention on information and communication technology, electronics and microelectronics (MIPRO)},
+  pages={1200--1205},
+  year={2015},
+  organization={Ieee}
+}
+
+@article{zebari2020comprehensive,
+  title={A comprehensive review of dimensionality reduction techniques for feature selection and feature extraction},
+  author={Zebari, Rizgar and Abdulazeez, Adnan and Zeebaree, Diyar and Zebari, Dilovan and Saeed, Jwan},
+  journal={Journal of Applied Science and Technology Trends},
+  volume={1},
+  number={2},
+  pages={56--70},
+  year={2020}
+}
+
+@inproceedings{mutlag2020feature,
+  title={Feature extraction methods: a review},
+  author={Mutlag, Wamidh K and Ali, Shaker K and Aydam, Zahoor M and Taher, Bahaa H},
+  booktitle={Journal of Physics: Conference Series},
+  volume={1591},
+  number={1},
+  pages={012028},
+  year={2020},
+  organization={IOP Publishing}
+}
+
+@Inbook{Guyon2006,
+author="Guyon, Isabelle
+and Elisseeff, Andr{\'e}",
+editor="Guyon, Isabelle
+and Nikravesh, Masoud
+and Gunn, Steve
+and Zadeh, Lotfi A.",
+title="An Introduction to Feature Extraction",
+bookTitle="Feature Extraction: Foundations and Applications",
+year="2006",
+publisher="Springer Berlin Heidelberg",
+address="Berlin, Heidelberg",
+pages="1--25",
+abstract="This chapter introduces the reader to the various aspects of feature extraction covered in this book. Section 1 reviews definitions and notations and proposes a unified view of the feature extraction problem. Section 2 is an overview of the methods and results presented in the book, emphasizing novel contributions. Section 3 provides the reader with an entry point in the field of feature extraction by showing small revealing examples and describing simple but effective algorithms. Finally, Section 4 introduces a more theoretical formalism and points to directions of research and open problems.",
+isbn="978-3-540-35488-8",
+doi="10.1007/978-3-540-35488-8_1",
+url="https://doi.org/10.1007/978-3-540-35488-8_1"
+}
+
+
+
+@article{Mutlag_2020,
+doi = {10.1088/1742-6596/1591/1/012028},
+url = {https://dx.doi.org/10.1088/1742-6596/1591/1/012028},
+year = {2020},
+month = {jul},
+publisher = {IOP Publishing},
+volume = {1591},
+number = {1},
+pages = {012028},
+author = {Wamidh K. Mutlag and Shaker K. Ali and Zahoor M. Aydam and Bahaa H. Taher},
+title = {Feature Extraction Methods: A Review},
+journal = {Journal of Physics: Conference Series},
+abstract = {Feature extraction is the main core in diagnosis, classification, clustering, recognition, and detection. Many researchers may by interesting in choosing suitable features that used in the applications. In this paper, the most important features methods are collected, and explained each one. The features in this paper are divided into four groups; Geometric features, Statistical features, Texture features, and Color features. It explains the methodology of each method, its equations, and application. In this paper, we made acomparison among them by using two types of image, one type for face images (163 images divided into 113 for training and 50 for testing) and the other for plant images(130 images divided into 100 for training and 30 for testing) to test the features in geometric and textures. Each type of image group shows that each type of images may be used suitable features may differ from other types.}
+}
+
+
+
+
+
 @book{adams1995hitchhiker,
   title={The Hitchhiker's Guide to the Galaxy},
   author={Adams, D.},
